--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
     </div>
   </div>
   <div class="py-5">
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
           <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner" role="listbox">
-              <div class="carousel-item"> <img class="d-block img-fluid" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" data-holder-rendered="true">
+              <div class="carousel-item active"> <img class="d-block img-fluid" src="slide1.jpg" data-holder-rendered="true">
                 <div class="carousel-caption">
                   <h3>First slide label</h3>
                   <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                 </div>
               </div>
-              <div class="carousel-item active"> <img class="d-block img-fluid" src="https://pingendo.com/assets/photos/wireframe/photo-1.jpg" data-holder-rendered="true">
+              <div class="carousel-item"> <img class="d-block img-fluid" src="slide2.jpg" data-holder-rendered="true">
                 <div class="carousel-caption">
                   <h3>Second slide label</h3>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
