--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel" data-interval="5000">
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active"> <img class="d-block img-fluid" src="slide1.jpg" data-holder-rendered="true">
                 <div class="carousel-caption">
