--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-12"><img class="center-block img-fluid d-block" src="Shadow%20of%20Everest%20TransCrust.png"></div>
+        <div class="col-md-12"><img class="center-block d-block img-fluid" src="Shadow%20of%20Everest%20TransCrust.png"></div>
       </div>
     </div>
   </div>
